--- a/index.html
+++ b/index.html
@@ -2,37 +2,20 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>hello phaser!</title>
+        <title>Minesweeper</title>
         <script src="js/phaser.min.js"></script>
+        <script src="js/slick-ui.min.js"></script>
+        <script src="js/menu_state.js"></script>
+        <script src="js/game_state.js"></script>
+        <script src="js/game.js"></script>
     </head>
     <body>
-
-    <script type="text/javascript">
-
-    window.onload = function() {
-
-        //  Note that this html file is set to pull down Phaser 2.5.0 from the JS Delivr CDN.
-        //  Although it will work fine with this tutorial, it's almost certainly not the most current version.
-        //  Be sure to replace it with an updated version before you start experimenting with adding your own code.
-
-        var game = new Phaser.Game(800, 600, Phaser.AUTO, '', { preload: preload, create: create });
-
-        function preload () {
-
-            game.load.image('logo', 'phaser.png');
-
-        }
-
-        function create () {
-
-            var logo = game.add.sprite(game.world.centerX, game.world.centerY, 'logo');
-            logo.anchor.setTo(0.5, 0.5);
-
-        }
-
-    };
-
-    </script>
-
+        <script type="text/javascript"> 
+            var g_Game = null; 
+            window.onload = function()  
+            { 
+                g_Game = new Minesweeper.Game(800, 600); 
+            };
+        </script>
     </body>
 </html>
