--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Minesweeper</title>
         <script src="js/phaser.min.js"></script>
         <script src="js/slick-ui.min.js"></script>
+        <script src="js/settings.js"></script>
         <script src="js/menu_state.js"></script>
         <script src="js/game_state.js"></script>
         <script src="js/game.js"></script>
