--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <title>Minesweeper</title>
-        <script src="js/phaser.min.js"></script>
-        <script src="js/slick-ui.min.js"></script>
+        <script src="js/external/phaser.min.js"></script>
+        <script src="js/external/slick-ui.min.js"></script>
         <script src="js/settings.js"></script>
         <script src="js/menu_state.js"></script>
         <script src="js/game_state.js"></script>
