Added some basic gameplay
[ADDED]
- A context menu cancel for the body
- Grid cells to handle functionality for each grid cell
- Bomb icon
- Grid now shows surrounding information
- Grid cells now react to flag/clear clicks
- Grid cells clear surrounding cells when applicable.

[CHANGED]
- Moved grid input functionality to grid cell itself
- Moved all bricks into one file (easier than deleting and adding new callbacks)

[REMOVED]
- Some unnecessary console logs.

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
         <script src="js/external/phaser.min.js"></script>
         <script src="js/external/slick-ui.min.js"></script>
         <script src="js/settings.js"></script>
+        <script src="js/grid_cell.js"></script>
         <script src="js/menu_state.js"></script>
         <script src="js/game_state.js"></script>
         <script src="js/game.js"></script>
     </head>
-    <body>
+    <body oncontextmenu="return false;">
         <script type="text/javascript"> 
             var g_Game = null; 
             window.onload = function()  
