Added modifications that allow me to remove all UI elements

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Minesweeper</title>
         <script src="js/external/phaser.min.js"></script>
         <script src="js/external/slick-ui.min.js"></script>
+        <script src="js/slick_ui_mods.js"></script>
         <script src="js/settings.js"></script>
         <script src="js/grid_cell.js"></script>
         <script src="js/menu_state.js"></script>
