Added debug elements to HTML file

--- a/index.html
+++ b/index.html
@@ -4,7 +4,26 @@
         <meta charset="UTF-8" />
         <title>Minesweeper</title>
         <script src="js/external/phaser.min.js"></script>
+
         <script src="js/external/slick-ui.min.js"></script>
+        <!--<script src="js/external/SlickUI/Plugin.js"></script>
+        <script src="js/external/SlickUI/Container/Container.js"></script>
+
+        <script src="js/external/SlickUI/Element/Renderer/ButtonRenderer.js"></script>
+        <script src="js/external/SlickUI/Element/Button.js"></script>
+        <script src="js/external/SlickUI/Element/Renderer/CheckboxRenderer.js"></script>
+        <script src="js/external/SlickUI/Element/Checkbox.js"></script>
+        <script src="js/external/SlickUI/Element/DisplayObject.js"></script>
+        <script src="js/external/SlickUI/Element/Renderer/PanelRenderer.js"></script>
+        <script src="js/external/SlickUI/Element/Panel.js"></script>
+        <script src="js/external/SlickUI/Element/Renderer/SliderRenderer.js"></script>
+        <script src="js/external/SlickUI/Element/Slider.js"></script>
+        <script src="js/external/SlickUI/Element/Text.js"></script>
+        <script src="js/external/SlickUI/Element/Renderer/TextFieldRenderer.js"></script>
+        <script src="js/external/SlickUI/Element/TextField.js"></script>
+        <script src="js/external/SlickUI/Keyboard/Key.js"></script>
+        <script src="js/external/SlickUI/Keyboard/Keyboard.js"></script>-->
+
         <script src="js/slick_ui_mods.js"></script>
         <script src="js/settings.js"></script>
         <script src="js/grid_cell.js"></script>
