Fix SlickUI bug

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     </head>
     <body oncontextmenu="return false;">
         <script type="text/javascript"> 
-            var g_Game = null; 
+            var game = null; 
             window.onload = function()  
             { 
-                g_Game = new Minesweeper.Game(800, 600); 
+                game = new Minesweeper.Game(800, 600); 
             };
         </script>
     </body>
