Added explanation why I don't adhere to my own codestyle here.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </head>
     <body oncontextmenu="return false;">
         <script type="text/javascript"> 
-            var game = null; 
+            var game = null; // Requires to be 'game' due to slickui limitations
             window.onload = function()  
             { 
                 game = new Minesweeper.Game(800, 600); 
