Made last requirement, a bot.
[ADDED]
- Bot class.
- Render function to update the timer (setTimeout wouldn't clear correctly)
- Helper functions to show surrounding mine count.
- UI and settings for bot selection.
- Instructions on how to play

[CHANGED]
- Moved things in panel on main menu.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="js/external/slick-ui.min.js"></script>
         <script src="js/slick_ui_mods.js"></script>
         <script src="js/settings.js"></script>
+        <script src="js/bot.js"></script>
         <script src="js/grid_cell.js"></script>
         <script src="js/menu_state.js"></script>
         <script src="js/game_state.js"></script>
